<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:weightSum="8"
    android:orientation="vertical">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/uit_logo"
            android:layout_width="200dp"
            android:layout_height="200dp" />
        <TextView
            android:textColor="@color/color_text"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/title_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_facebook"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="8dp"
                android:visibility="gone" />

            <Button

                android:drawableLeft="@drawable/ic_facebook_login"
                android:id="@+id/btn_login_facebook"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#3b5998"
                android:drawablePadding="10dp"
                android:onClick="onClick"
                android:padding="8dp"
                android:text="@string/facebool_login"
                android:textColor="#ffffff"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout

            android:id="@+id/FrameLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_google"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="8dp"
                android:visibility="gone" />

            <Button
                android:text="@string/google_login"
                android:drawableLeft="@drawable/ic_google_login"
                android:id="@+id/btn_login_google"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="#ffffff"
                android:onClick="onClick"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="14sp" />
        </FrameLayout>
    </LinearLayout>


</LinearLayout>